--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="header"></div>
+    <div class="header">
+        <h2>Header Logo</h2>
+        <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+    </div>
     <div class="summary"></div>
     <div class="boxes"></div>
     <div class="quote"></div>
