--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <div class="boxes"></div>
     <div class="quote"></div>
     <div class="sign-up"></div>
-    <div class="footer"></div>
+    <div class="footer">
+        <p>Copyright © The Odin Project 2021</p>
+    </div>
 </body>
 </html>
