--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
             <li><a href="#">header link three</a></li>
         </ul>
     </div>
-    <div class="summary"></div>
+    <div class="summary">
+        <div class="summary-text">
+            <h3>This website is awesome</h3>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <div class="summary-img">
+            <img alt="this is a placeholder for an image">
+        </div>
+    </div>
     <div class="boxes"></div>
     <div class="quote"></div>
     <div class="sign-up"></div>
