--- a/index.html
+++ b/index.html
@@ -25,7 +25,27 @@
             <img alt="this is a placeholder for an image">
         </div>
     </div>
-    <div class="boxes"></div>
+    <div class="boxes">
+        <h3>Some random information</h3>
+        <div class="boxes-container">
+            <div>
+                <img>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
     <div class="quote"></div>
     <div class="sign-up"></div>
     <div class="footer">
