--- a/index.html
+++ b/index.html
@@ -50,7 +50,17 @@
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <h3>-Thor, God of Thunder</h3>
     </div>
-    <div class="sign-up"></div>
+    <div class="sign-up">
+        <div class="sign-up-box">
+            <div class="sign-up-text">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="sign-up-btn-div">
+                <button>Sign up</button>
+            </div>
+        </div>
+    </div>
     <div class="footer">
         <p>Copyright © The Odin Project 2021</p>
     </div>
